Cities in Kentucky

--- a/recreateWebpage.html
+++ b/recreateWebpage.html
@@ -22,7 +22,7 @@
                  
         <a href="https://kentuckytourism.com/">CLICK HERE!</a>
         <hr>
-        <a href="cities.html">Cities in Kentucky</a>
+        <a href="cities.html"> target="_blank">Cities in Kentucky</a>
                  
 </body>
 </html>
